@@ -1,3 +1,10 @@
+2010-01-30  Onkar Shinde  <onkarshinde@gmail.com>
+
+	* src/interface.c, src/callbacks.*: Introduce a toolbar button to show/hide
+	the data pane. This allows the user to have more screen space for program
+	editing.
+	* po/gnusim8085.pot: Update to include the tooltip for newly added button.
+
 2010-01-28  Onkar Shinde  <onkarshinde@gmail.com>
 
 	* po/de.po, po/LINGUAS, AUTHORS: German translation.
